--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "core-js": "^2.5.4",
+    "ng-snotify": "^4.3.1",
+    "ngx-editor": "^3.3.0",
+    "primeicons": "^1.0.0-beta.10",
+    "primeng": "^6.1.2",
+    "quill": "^1.3.6",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.2.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
