--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "angularfire2": "^5.0.0-rc.12",
     "core-js": "^2.5.4",
+    "firebase": "^5.4.1",
     "ng-snotify": "^4.3.1",
     "ngx-editor": "^3.3.0",
     "primeicons": "^1.0.0-beta.10",
